# proktor

./: .gitignore  CMakeLists.txt  init_deps.sh
app/: proktor.cpp  validate.cpp
app/inc/: common.h  logger.h  proktor.h  validate.h
lib/: log.h
src/: action_handler.cpp  common.cpp  proc.cpp
src/app/: proktor.cpp  validate.cpp
src/app/inc/: logger.h  proktor.h  validate.h
src/common/: common.cpp
src/common/inc/: common.h
src/inc/: action_handler.h  common.h  proc.h
src/proktord/: ac_start.cpp  action_handler.cpp  metadata.cpp  pdc.cpp  proc.cpp  utils.cpp
src/proktord/actions/inc/: ac_start.h
src/proktord/inc/: ac_start.h  action_handler.h  metadata.h  pdc.h  proc.h  utils.h
test/: execute_sys_call.cpp  test_process.cpp
test/cpp/: loop.cpp
test/nodejs/: loop.js
